--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   trino:
-    image: ghcr.io/brobridgeorg/plasma-trino:1
+    image: ghcr.io/brobridgeorg/plasma-trino:v0.0.20
     container_name: trino
     ports:
-      - "9453:8080"
+      - "8081:8080"
     healthcheck:
       test: ["CMD-SHELL", "/usr/lib/trino/bin/health-check"]
       interval: 15s # 每 15 秒檢查一次
@@ -15,7 +15,114 @@ services:
     depends_on:
       - plasma-postgres
       - hive-metastore
-      - minio
+      - seaweedfs
+    networks:
+      - plasma
+
+  plasma-postgres:
+    image: postgres:16
+    container_name: plasma-postgres
+    environment:
+      POSTGRES_PASSWORD: rootpwd
+      POSTGRES_DB: metastore
+    ports:
+      - "5487:5432"
+    volumes:
+      - ./assets/postgres-data:/var/lib/postgresql/data:Z
+    networks:
+      - plasma
+
+  seaweedfs:
+    image: chrislusf/seaweedfs:4.05
+    container_name: seaweedfs
+    ports:
+      - "9333:9333" # master server
+      - "8080:8080" # filer web UI
+      - "8888:8888" # filer server
+      - "8333:8333" # s3 server
+    environment:
+      AWS_ACCESS_KEY_ID: admin
+      AWS_SECRET_ACCESS_KEY: admin
+    entrypoint: /bin/sh
+    command: >-
+      -c "
+      weed server -s3 &
+      SERVER_PID=$$!;
+      echo 'Waiting for filer server to be ready...';
+      until curl -I http://localhost:8888/healthz 2>/dev/null; do
+        sleep 2;
+      done;
+      echo 'Filer server is ready. Creating bucket...';
+      while true; do
+        if echo 's3.bucket.create -name \"iceberg-warehouse\"' | weed shell 2>/dev/null; then
+          break;
+        else
+          echo 'Failed to create bucket. Retrying in 10 seconds...';
+          sleep 10;
+        fi;
+      done;
+      wait $$SERVER_PID;
+      "
+    volumes:
+      - ./assets/seaweedfs-data:/data:Z
+    networks:
+      - plasma
+
+  hive-metastore:
+    # This is the Hive Metastore service
+    image: "starburstdata/hive:3.1.3-e.14"
+    # This is the hive server hostname
+    hostname: hive-metastore
+    container_name: hive-metastore
+    ports:
+      # Expose Metastore Thrift service on port 9083.
+      - "9083:9083"
+    # In case of service/container crash, the container will restart automatically.
+    restart: always
+    depends_on:
+      - plasma-postgres
+    environment:
+      HIVE_METASTORE_DRIVER: org.postgresql.Driver
+      HIVE_METASTORE_JDBC_URL: jdbc:postgresql://plasma-postgres:5432/metastore
+      HIVE_METASTORE_USER: postgres
+      HIVE_METASTORE_PASSWORD: rootpwd
+      HIVE_METASTORE_WAREHOUSE_DIR: s3://iceberg-warehouse/
+      S3_ENDPOINT: http://seaweedfs:8333
+      S3_ACCESS_KEY: admin
+      S3_SECRET_KEY: admin
+      S3_PATH_STYLE_ACCESS: "true"
+      REGION: ""
+      GOOGLE_CLOUD_KEY_FILE_PATH: ""
+      AZURE_ADL_CLIENT_ID: ""
+      AZURE_ADL_CREDENTIAL: ""
+      AZURE_ADL_REFRESH_URL: ""
+      AZURE_ABFS_STORAGE_ACCOUNT: ""
+      AZURE_ABFS_ACCESS_KEY: ""
+      AZURE_WASB_STORAGE_ACCOUNT: ""
+      AZURE_ABFS_OAUTH: ""
+      AZURE_ABFS_OAUTH_TOKEN_PROVIDER: ""
+      AZURE_ABFS_OAUTH_CLIENT_ID: ""
+      AZURE_ABFS_OAUTH_SECRET: ""
+      AZURE_ABFS_OAUTH_ENDPOINT: ""
+      AZURE_WASB_ACCESS_KEY: ""
+      HIVE_METASTORE_USERS_IN_ADMIN_ROLE: "admin"
+    networks:
+      - plasma
+
+  plasma:
+    image: ghcr.io/brobridgeorg/plasma-deploy:v0.0.13
+    container_name: plasma
+    privileged: true
+    user: "0"
+    ports:
+      - "5001:5001"
+    depends_on:
+      trino:
+        condition: service_healthy
+    restart: always
+    volumes:
+      - ./assets/config.toml:/app/config.toml
+      - ./assets/plasma-data:/app/data
     networks:
       - plasma
 
